# BackendFlask

./: main.py  pyproject.toml
src/: main.py
src/controllers/: user_controller.py
src/database/: connection.py
src/errors/: __init__.py  error_handlers.py  exception.py
src/model/: __init__.py  user_model.py
src/repository/: user_repository.py
src/use_case/: __init__.py  register_user.py  utils.py
